@@ -61,6 +61,10 @@ implement in GXemul. Some items in this list are perhaps already fixed.
 		     breakpoint subsystem disk warn	<-- break only for warn and error.
 
 <font color="blue">Misc.:</font>
+	o) Check if -std=c99 is needed in the configure script.
+	o) OpenBSD/luna88k bootup: why is it idling so much? Waiting for disk?
+	o) 88K dev_m8820x: see if invalidation occurs often, and whether it is
+		possible to change to invalidation of specific regions only...
 	o) Try X11 grabbing with multiple host displays? ssh with X11 forwarding from laptop?
 		with multiple mouse pointers, _which_ mouse pointer is grabbed?
 	o) Try all guest OSes in the documentation, cleaning up debugmsg related stuff as I go along.
@@ -88,20 +92,6 @@ implement in GXemul. Some items in this list are perhaps already fixed.
 <pre>
 Dyntrans / general:
 	x)  Document the break-out-of-dyntrans mechanism.
-	x)  SMP: INVALIDATION should cause translations in _all_ cpus to be
-	    invalidated in the machine, e.g. on a write to a write-protected page
-	    (containing code)
-
-	    Horrible hack:
-
-	                cpu_create_or_reset_tc(cpus[i]);
-			cpus[i]->invalidate_translation_caches(
-	                    cpus[i], 0, INVALIDATE_ALL);
-
-	    in machine_run() seems to make Luna88K run stable (?) with 4 CPUs.
-	    Real solution may be to just implement a loop over all CPUs in
-	    memory_rw when storing data to pages?
-
 	o)  Per-arch overrides for whether to print symbols when executing in userspace?
 		e.g. MIPS is OK since symbols are at kseg0.
 		e.g. M88K is not OK, since userland and supervisor are the same numeric values.
@@ -408,7 +398,7 @@ HPCmips:
 	x)  A NIC? (As a PCMCIA device?)
 
 LUNA-88K:
-	OpenBSD power-down?
+	OpenBSD power-down? Separate from Reboot functionality. See openbsd source code...
 	autoboot of OpenBSD: boot_unit and boot_partition in NVRAM should be
 		set to the actual boot device; currently hardcoded to 0,0.
 	luna88k bootblock loader:
@@ -416,20 +406,23 @@ LUNA-88K:
 			offset into a disk image).
 		o) if no bootstring (boot file) is specified, then perhaps try a few
 			from a list? "vmunix", "boot".
+	Dyntrans-accelerated framebuffer access: this requires that
+		a) both the "read" and "write" parts of the framebuffer memory
+		   map to the same host pages, and
+		b) that the X11 rendering code supports reading from an offset
+		   (8 bytes?)
 	Color framebuffer: complicated, as the bit planes are after each other and not
 		like in most other systems.
 	SCSI: OpenBSD/luna88k warns about
 		probe(spc0:0:0): Check Condition (error 0) on opcode 0x0
 		for non-connected devices. (Just a warning though.)
 	Cursor keys in the graphical framebuffer window? (Works with pckbd for SGI?)
-	separate out some devices into their own files? (reuse TOD clock for example)
+	Underscore (_) key in the graphical framebuffer maps incorrectly?
+	Separate out some devices into their own files? (reuse TOD clock for example)
 	Front-side LCD panel:
 		One idea is to make the framebuffer window taller, and show
 		the LCD text in the lower left-hand corner, in a way mimicing
-		a real machine.
-	SMP stability: possibly instabilities are related to clearing
-		translation cache on page writes (for ALL cpus, not just the
-		one doing the page write).
+		a real machine. Use YCX5 font?
 	LUNA-88K2 machine: check OpenBSD source code to see where there are
 		differences in devices and registers etc.
 
